# AutoGuiCPP_Win

./: CMakeLists.txt  README.md  autogui.cpp  autogui.h  hotkey.hpp  keyboard.hpp  main.cpp  screencut.cpp  screencut.h
